force-app/main/default/objects/FSM_WorkHistory__c/FSM_WorkHistory__c.object-meta.xml
<CustomObject>
    <description>Created as part of SFI-1712</description>
    <label>Work History</label>
    <nameField>
        <displayFormat>WH-{000000000}</displayFormat>
        <label>Work History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>