force-app/main/default/objects/FSM_WorkHistory__c/fields/FSM_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExternalId__c</fullName>
    <description>User Story SFI-1712
SFI-2381 changed label, as we will be adding date time to the external id send by SAP</description>
    <externalId>true</externalId>
    <label>External Id updated In SF</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>