force-app/main/default/objects/FSM_WorkHistory__c/fields/FSM_ExternalIdSendBySAP__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExternalIdSendBySAP__c</fullName>
    <description>SFI-2381</description>
    <label>External Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>