force-app/main/default/objects/FSM_WorkHistory__c/fields/FSM_JobCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobCreatedDate__c</fullName>
    <description>SFI-1712</description>
    <label>Job Created Date Time</label>
    <type>DateTime</type>
</CustomField>