force-app/main/default/objects/FSM_WorkHistory__c/fields/FSM_JobNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobNumber__c</fullName>
    <description>SFI-1712
Updated as part of SFI-1929</description>
    <label>Job Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>