force-app/main/default/objects/FSM_WorkHistory__c/fields/FSM_LastUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_LastUpdatedDate__c</fullName>
    <description>SFI-1712</description>
    <label>Last Updated Date Time</label>
    <type>DateTime</type>
</CustomField>