force-app/main/default/objects/FSM_WorkHistory__c/fields/FSM_NotificationLongText__c.field-meta.xml
<CustomField>
    <fullName>FSM_NotificationLongText__c</fullName>
    <description>SFI-1712</description>
    <label>Notification Long Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>