force-app/main/default/objects/FSM_WorkHistory__c/fields/FSM_Status__c.field-meta.xml
<CustomField>
    <fullName>FSM_Status__c</fullName>
    <description>SFI-1712</description>
    <label>Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>