force-app/main/default/objects/FSM_WorkHistory__c/fields/FSM_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkOrder__c</fullName>
    <description>SFI-1712</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work History</relationshipLabel>
    <relationshipName>FSM_WorkHistory</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>