force-app/main/default/objects/FSM_WorkHistory__c/fields/FSM_WorksDescription__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorksDescription__c</fullName>
    <description>SFI-1712</description>
    <label>Works Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>